--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@ export AWS_ACCESS_KEY_ID=''
 export AWS_SECRET_ACCESS_KEY=''
 export S3_BUCKET_NAME=''
 
+export DATA_DIRECTORY_PATH='/path/to/transit-alarm/data'
 export PUBLIC_DIRECTORY_PATH='/path/to/transit-alarm/dist'
+export SRC_DIRECTORY_PATH='/path/to/transit-alarm/src'
